[project]
name = "raw2ultra"
version = "0.1.0"
description = "A Python CLI tool for raw2ultra processing"
authors = [
    {name = "yankeguo"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1"
]

[project.scripts]
raw2ultra = "raw2ultra.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

