[project]
name = "raw2ultra"
version = "0.1.0"
description = "A Python CLI tool for raw2ultra processing"
authors = [
    {name = "yankeguo"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "rawpy (>=0.25.0,<0.26.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "numpy>=1.24.0",
    "scikit-image (>=0.25.2,<0.26.0)"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
]

[project.scripts]
raw2ultra = "raw2ultra.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
